--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "uk.co.cgfindies.youtubevogthumbnailcreator"
+        applicationId "uk.co.cgfindies.YoutubeAPIAndroidSample"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -51,17 +51,13 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.webkit:webkit:1.4.0'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.lifecycle:lifecycle-process:2.4.0'
     runtimeOnly 'androidx.activity:activity-ktx:1.4.0'
-    runtimeOnly 'androidx.fragment:fragment-ktx:1.4.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
-    implementation 'com.google.mlkit:face-detection:16.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.google.android.gms:play-services-auth:20.0.0'
     implementation('com.google.api-client:google-api-client-android:1.22.0') {
         exclude group: 'org.apache.httpcomponents'
     }
